@@ -1,7 +1,12 @@
 \input texinfo @c -*-texinfo-*-
 
-@setfilename ../info/ns-emacs
+@setfilename ../../info/ns-emacs
 @settitle Emacs.app
+
+@dircategory Emacs
+@direntry
+* NS-Emacs: (ns-emacs).   Emacs.app for GNUstep and MacOS X.
+@end direntry
 
 @iftex
 @finalout
