@@ -1,3 +1,7 @@
+2008-07-19  Andreas Schwab  <schwab@suse.de>
+
+	* ns-emacs.texi: Move to ../misc.
+
 2008-07-15  Chong Yidong  <cyd@stupidchicken.com>
 
 	* entering.texi (Exiting): Don't describe text-only terminals as the
